<resources>
    <string name="app_name">Lets Play Piano!</string>
    <string name="c4">C4</string>
    <string name="d4">D4</string>
    <string name="e4">E4</string>
    <string name="f4">F4</string>
    <string name="g4">G4</string>
    <string name="a4">A4</string>
    <string name="b4">B4</string>
    <string name="c5">C5</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_mode">Choose a mode:</string>
    <string name="free_play_mode">Free Play Mode</string>
    <string name="game_mode">game mode</string>
</resources>