<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <Button
        android:id="@+id/F4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_f4"
        android:text="@string/f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E4" />

    <Button
        android:id="@+id/A4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_a4"
        android:text="@string/a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/G4" />

    <Button
        android:id="@+id/C5"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_c5"
        android:text="@string/c5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B4" />

    <Button
        android:id="@+id/E4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_e4"
        android:text="@string/e4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/D4" />

    <Button
        android:id="@+id/D4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_d4"
        android:text="@string/d4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C4" />

    <Button
        android:id="@+id/B4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_b4"
        android:text="@string/b4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A4" />

    <Button
        android:id="@+id/C4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@drawable/button_background_color_c4"
        android:text="@string/c4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#EABFB1" />

    <Button
        android:id="@+id/G4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@drawable/button_background_color_g4"
        android:text="@string/g4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/F4" />

</androidx.constraintlayout.widget.ConstraintLayout>