<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_a_mode"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/freeplaybtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:layout_marginTop="11dp"
        android:text="@string/free_play_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt" />

    <Button
        android:id="@+id/gamebtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:layout_marginTop="11dp"
        android:text="@string/game_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freeplaybtn" />

    <Button
        android:id="@+id/bluetoothbtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:layout_marginTop="11dp"
        android:text="Connect to Bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebtn" />

</androidx.constraintlayout.widget.ConstraintLayout>